added server info
